# libreplate

./: .env_example  .gitignore  README.md  db.sqlite3  manage.py  notes.txt  package-lock.json  pyproject.toml  requirements.txt  setup.sh  tasks.py  todo_list.txt
accounts/: models.py  (+3 more)
backend/: pyproject.toml  tasks.py
backend/accounts/: api_urls.py  urls.py  views.py
backend/body_metrics/: defaults.py  forms.py  urls.py  views.py
backend/body_metrics/management/commands/: sync_body_metrics.py
backend/default_meals/: forms.py  models.py  signals.py
backend/diary/: api.py  api_urls.py  forms.py  models.py  serializers.py
backend/diary/templates/diary/: diary.html
backend/diary/templatetags/: diary_filters.py
backend/foods/: api.py  api_urls.py  forms.py  models.py  serializers.py  views.py
backend/foods/services/: usda_import.py
backend/goals/: forms.py
backend/groceries/: api_urls.py  serializers.py  tests.py  urls.py
backend/groceries/templates/groceries/: create.html  list.html
backend/libreplate/: asgi.py  settings.py  urls.py  views.py
backend/meal_plans/: forms.py  models.py
backend/meal_plans/templates/meal_plans/: meal_plan_edit.html
backend/meal_plans/templatetags/: meal_plan_tags.py
backend/nutrients/: defaults.py  services.py
backend/recipes/: api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/settings/: urls.py
backend/shared/templatetags/: nav_tags.py
backend/templates/: base.html
backend/units/: signals.py  tests.py
backend/user_statistics/: forms.py  views.py
(+325 files in other folders)
