[project]
name = "libreplate"
version = "0.1.0"
description = "Open source diet and food tracking."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.11.1",
    "black==26.5.1",
    "build==1.5.1",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "django==5.2.15",
    "django-cors-headers>=4.9.0",
    "django-environ==0.14.0",
    "django-htmx==1.27.0",
    "djangorestframework==3.17.1",
    "gunicorn==26.0.0",
    "idna==3.18",
    "invoke>=3.0.3",
    "isort==8.0.1",
    "lupa==2.8",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.1",
    "pillow==12.3.0",
    "platformdirs==4.10.1",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "pyproject-hooks==1.2.0",
    "python-dotenv==1.2.2",
    "pytokens==0.4.1",
    "requests==2.34.2",
    "ruff==0.15.22",
    "setuptools==83.0.0",
    "sqlparse==0.5.5",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "wheel==0.47.0",
]
